|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-03-17 Benedikt Heintel
	- CONFIGS:
		* changed: build date
	- ENGINE:
		* fixed bug #102: Backup engine aborts if mysql user/password information isn't correct. Thanks to Dominik Habbel
	- GUI:
		* fixed bug #109: update URL corrected
		* updated: PHPmyAdmin to 2.10.0.2

2007-03-16 Benedikt Heintel
	- DOCS:
		* Debian: updated INSTALL
		* Debian: added etch package rkhunter
	- ENGINE:
		* added: feature #94: change of php.ini-files on update
		* fixed: warning
	- GUI:
		* updated: rootkit hunter
	- SETUP:
		* fixed bug #106: VHCS Omega frontend not working on setup

2007-03-15 Benedikt Heintel
	- CONFIGS:
		* Workaround for VHCS panel page not longer working after creation of a new domain
		* fixed bug #93: the value {STARTER_DIR} which is used by the php fcgi support isn't replaced
	- ENGINE:
		* some trivial changes
	- GUI:
		* some trivial changes

2007-03-13 Benedikt Heintel
	- CONFIGS:
		* Ubuntu: proftpd changed config files for v3.1

2007-03-12 Benedikt Heintel
	- GUI:
		* fixed: some design issues
		* fixed: bug in error pages
		* changed: behaviour of lostpassword messages
		* modified: layout of some functions

2007-03-09 Benedikt Heintel
	- CONFIGS:
		* proftpd: changed config files for v3.1
	- SETUP:
		* fixed bug #104 & #105: error on setting up proFTPd on Debian Etch

2007-03-09 Benedikt Heintel
	- LANGUAGES:
		* Finish: added missing strings

2007-03-06 Benedikt Heintel
	- CONFIGS:
		* RedHat: Added support for RedHat (seeking for maintainer)
		* Ubuntu: Added support for Ubuntu
		* updated postfix master file
		* updated Makefiles
		* added greylisting via postgrey for Debian and Ubuntu
	- DOCS: