@@ -15,11 +15,13 @@ VersionH = 2.4 Rhea
 
 LOGIN_TIME_OUT = 20
 
-DEFAULT_ADMIN_ADDRES =
+DEFAULT_ADMIN_ADDRESS =
 
 SERVER_HOSTNAME = debian
 
 BASE_SERVER_IP = 127.0.0.1
+
+BASE_SERVER_VHOST =
 
 MR_LOCK_FILE = /tmp/vhcs2.lock
 
@@ -119,7 +121,7 @@ APACHE_USERS_LOG_DIR = /var/log/apache2/users
 
 APACHE_BACKUP_LOG_DIR = /var/log/apache2/backup
 
-APACHE_CONF_FILE = /etc/apache2/sites-available/vhcs2.conf
+APACHE_SITES_DIR = /etc/apache2/sites-available
 
 APACHE_CONF_DIR = /etc/apache2
 
