@@ -1,8 +1,10 @@
 #!/usr/bin/perl
 
 # VHCS(tm) - Virtual Hosting Control System
-# Copyright (c) 2001-2004 by moleSoftware GmbH
+# Copyright (c) 2001-2006 by moleSoftware GmbH
 # http://www.molesoftware.com
+# Copyright (c) 2006-2007 by isp Control Panel
+# http://isp-control.net
 #
 #
 # License:
@@ -23,10 +25,10 @@
 #    http://www.mozilla.org/MPL/MPL-1.1.html
 #
 #
-# The VHCS Home Page is at:
+# The VHCS ω Home Page is at:
 #
-#    http://www.vhcs.net
-
+#    http://isp-control.net
+#
 
 use FindBin;
 use lib "$FindBin::Bin/";
@@ -836,7 +838,7 @@ sub sub_add_httpd_cfg_data {
     my $backup_dir = "$conf_dir/apache/backup";
 
 
-    my $sys_cfg = $main::cfg{'APACHE_CONF_FILE'};
+    my $sys_cfg = "$main::cfg{'APACHE_SITES_DIR'}/vhcs2.conf";
 
     my $timestamp = time;
 
@@ -1126,7 +1128,7 @@ sub sub_del_httpd_cfg_data {
     my $backup_dir = "$conf_dir/apache/backup";
 
 
-    my $sys_cfg = $main::cfg{'APACHE_CONF_FILE'};
+    my $sys_cfg = "$main::cfg{'APACHE_SITES_DIR'}/vhcs2.conf";
 
     my $timestamp = time;
 
