@@ -11,6 +11,11 @@ VHCS 2.4.8 ω Omega Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-03-18 Benedikt Heintel
+	* fixed typo: DEFAULT_ADMIN_ADDRES
+	- CONFIGS:
+		* fixed bugs #95 and #108: administrative domain created on Setup
+
 2007-03-17 Benedikt Heintel
 	- CONFIGS:
 		* changed: build date
